@@ -3,7 +3,8 @@ Title: Datasets and Functions to Benchmark Neural Network Packages
 Description: Datasets and functions to benchmark (convergence, speed, ease of use) R packages dedicated to regression with neural networks (no classification in this version). The templates for the tested packages are available in R, Rmd and html formats at <https://github.com/pkR-pkR/NNbenchmarkTemplates> and <https://akshajverma.com/NNbenchmarkWeb>.
 Imports: R6, pkgload
 Suggests: brnn, validann
-Version: 3.0.3
+Depends: R (>= 3.5.0)
+Version: 3.0.4
 Date: 2020-06-30
 License: GPL-2
 Maintainer: Patrice Kiener <fattailsr@inmodelia.com>
