@@ -22,6 +22,7 @@ export(timediff)
 export(timestart)
 export(trainPredict_1data)
 export(trainPredict_1mth1data)
+export(trainPredict_1pkg)
 import(R6)
 import(graphics)
 import(utils)
